log
Sat, May 17, 2025 10:16:18 PM: 
 sudoku.c | 76 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++---
 1 file changed, 73 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
   int i, j, k;
             ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:94:11: error: implicit declaration of function 'addtolist' [-Werror=implicit-function-declaration]
           addtolist(list, new) ;
           ^~~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:139:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Sat, May 17, 2025 10:16:36 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
   int i, j, k;
             ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:94:11: error: implicit declaration of function 'addtolist' [-Werror=implicit-function-declaration]
           addtolist(list, new) ;
           ^~~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:139:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
cc1.exe: all warnings being treated as errors
39d944b
Sat, May 17, 2025 10:17:01 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
   int i, j, k;
             ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:94:11: error: implicit declaration of function 'addtolist' [-Werror=implicit-function-declaration]
           addtolist(list, new) ;
           ^~~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:139:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
cc1.exe: all warnings being treated as errors
039bb11
Sat, May 17, 2025 10:17:06 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
   int i, j, k;
             ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:94:11: error: implicit declaration of function 'addtolist' [-Werror=implicit-function-declaration]
           addtolist(list, new) ;
           ^~~~~~~~~
test.c: At top level:
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:139:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
cc1.exe: all warnings being treated as errors
e1b894c
Sat, May 17, 2025 10:21:30 PM: 
 sudoku.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:143:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
3f3126c
Sat, May 17, 2025 10:21:42 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:142:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
sudoku.c: In function 'get_adj_nodes':
sudoku.c:104:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
79117a7
